[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/classic_font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.317647, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1208.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1208.0
margin_bottom = 37.0

[node name="GameOverLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1208.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Perdu !"
align = 1
valign = 1

[node name="MarginBox" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 1208.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 80 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 1208.0
margin_bottom = 171.0

[node name="BestScoreLbl" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1208.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.101961, 0.490196, 0.192157, 1 )
align = 1

[node name="CurrentPlayerBestCoreLbl" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 1208.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.101961, 0.490196, 0.192157, 1 )
align = 1

[node name="MarginBox2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 1208.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 1208.0
margin_bottom = 570.0
size_flags_vertical = 3
alignment = 1

[node name="Scores" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 602.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LastScoresTitleLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Scores"]
margin_right = 602.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Derniers scores enregistr√©s :"
align = 1

[node name="Highscores" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 606.0
margin_right = 1208.0
margin_bottom = 341.0
size_flags_horizontal = 3

[node name="HighScoresLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Highscores"]
margin_right = 602.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Meilleurs scores :"
align = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 574.0
margin_right = 1208.0
margin_bottom = 608.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 1208.0
margin_bottom = 34.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
margin_left = 446.0
margin_right = 554.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Rejouer"

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
margin_left = 558.0
margin_right = 761.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "Menu principal"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
